src/objects/Warranty_Offer_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Default_Limited_Production_Warranty__c</fullName>
        <label>Default Limited Production Warranty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_New_Roof_Guarantee__c</fullName>
        <label>Default New Roof Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Parts_Labor_Warranty__c</fullName>
        <label>Default Parts &amp; Labor Warranty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_System_Moving_Guarantee__c</fullName>
        <label>Default System Moving Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Warranty Offer Settings</label>
</CustomObject>